Image Wrap Fixing.

--- a/css/home.css
+++ b/css/home.css
@@ -64,7 +64,7 @@
   } */
 
 .hero-container {
-  grid-template-columns: 1fr;
+  grid-template-columns: minmax(0, 1fr);
   align-items: center;
   row-gap: var(--g-16-card-item);
 }
@@ -97,11 +97,17 @@
 }
 
 .hero-img-box {
+  background-color: red;
   justify-self: center;
-  width: 30%;
+  min-width: 100%;
+  max-height: 200px;
+  overflow: hidden;
+  object-fit: cover;
 }
 
 .hero-list-item > a .hero-img-box img {
+  width: 100%;
+  height: 100%;
   transition: var(--transition-e);
 }
 
